# utxo-tracing

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  example.env  justfile
.github/workflows/: docker.yml  test.yml
indexer/: Cargo.toml  Dockerfile
indexer/src/: api.rs  benchmark.rs  error.rs  indexer.rs  main.rs  utils.rs
network-shared/: Cargo.toml  Dockerfile
network-shared/src/: constants.rs  error.rs  lib.rs
scripts/: benchmark_testing.sh  get_address_balance_at_block.sh
storage/: Cargo.toml  Dockerfile
storage/src/: database.rs  error.rs  main.rs  signed_db.rs
storage/src/datasources/: csv.rs  mod.rs  sqlite.rs
storage/src/models/: block.rs  mod.rs  signed_tx.rs  utxo.rs  whitelist.rs
storage/src/network/: http.rs  mod.rs  socket.rs
