[workspace]
members = [
    "indexer",
    "network-shared",
    "storage",
]
resolver = "2"

[workspace.dependencies]
bitcoin = { version = "0.31.0", features = ["serde"] }
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
