[workspace]
members = [
    "indexer",
    "network-shared",
    "storage",
]
resolver = "2"

[workspace.dependencies]
bitcoin = { version = "0.31.0", features = ["serde"] }
bitcoincore-rpc = "0.17.0"
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
hex = "0.4"
log = "0.4"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
