[package]
name = "indexer"
version = "0.1.1"
edition = "2021"

[dependencies]
network-shared = { path = "../network-shared" }

bitcoin.workspace = true
bitcoincore-rpc.workspace = true
bincode.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
hex.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true