[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
network-shared = { path = "../network-shared" }
bitcoincore-rpc = "0.17.0"
bincode.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger = "0.10"
hex = "0.4"
log = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
warp = "0.3"
