[package]
name = "indexer"
version = "0.1.9"
edition = "2021"

[dependencies]
network-shared = { path = "../network-shared" }
bitcoincore-rpc = "0.18.0"
bincode.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger = "0.10"
hex = "0.4"
log = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
async-trait = "0.1"
lru = "0.12"
