[package]
name = "storage"
version = "0.2.0"
edition = "2021"

[dependencies]
network-shared = { path = "../network-shared" }

actix-web = "4.9.0"
bincode.workspace = true
bitcoin.workspace = true
chrono.workspace = true
clap.workspace = true
csv = "1.3.1"
hex = "0.4.0"
parking_lot = "0.12.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = "0.32.1"
rusqlite_migration = "1.3.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true